--- a/doc/sphinx/cttheme/static/cantera.css
+++ b/doc/sphinx/cttheme/static/cantera.css
@@ -1,4 +1,4 @@
-@import url('./sphinxdoc.css');
+@import url('./alabaster.css');
 
 dl.method, dl.attribute, dl.staticmethod, dl.classmethod {
      border-top: 1px solid #aaa;
@@ -10,23 +10,8 @@ dl.class, dl.function {
     padding-top: 4px;
 }
 
-a.button {
-    margin-top: 16px;
-    background-color: #BFD1D4;
-
+.nav-link {
     text-decoration: none !important;
-    text-align: center;
-    display: inline-block;
-
-    color: white;
-    font-size: 24px;
-    padding: 12px 28px;
-
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-}
-
-a.button:hover {
-    background-color: #4CAF50; /* Green */
-    color: white;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
+    font-size: 1rem !important;
 }
