--- a/doc/sphinx/cttheme/static/cantera.css
+++ b/doc/sphinx/cttheme/static/cantera.css
@@ -15,3 +15,5 @@ dl.class, dl.function {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
     font-size: 1rem !important;
 }
+
+#logo { width: 250px; }
